# my-ml-library

./: CMakeLists.txt  README.md  Readme.md  TODO
.cache/clangd/index/: ALayer.hpp.E418E6B0ED2E2383.idx  ANeuron.hpp.FBEB12A9EDCC7519.idx  ActivationFunctions.cpp.17CC6FE405515745.idx  ActivationFunctions.hpp.E314E5974328B298.idx  FCL.hpp.716EB6DA63070E34.idx  ILayer.hpp.E506464ADC17D9D0.idx  INeuron.hpp.1E842BB3E7120D9A.idx  NeuralNetwork.hpp.08C64D7DDADF5933.idx  NeuralNetworkFactory.hpp.E4E6DF4BFED7D2AC.idx  Pereptron.hpp.09437805DC138BA6.idx  hyperParameters.hpp.A80847FC097EE553.idx  layerConfig.hpp.97AE0ECED763AAFB.idx  main.cpp.2D78A35D26FB0820.idx  neuralNetworkConfig.hpp.0C7D933CBE4E0251.idx
include/activationFunctions/: ActivationFunctions.hpp
include/configClasses/: dataPoint.hpp  hyperParameters.hpp  layerConfig.hpp  neuralNetworkConfig.hpp
include/layer/concrete/: FCL.hpp
include/layer/virtual/: ALayer.hpp  ILayer.hpp
include/neuralNetwork/: NeuralNetwork.hpp  NeuralNetworkFactory.hpp
include/neurons/concrete/: Pereptron.hpp
include/neurons/virtual/: ANeuron.hpp  INeuron.hpp
src/: main.cpp
src/activationFunctions/: ActivationFunctions.cpp
src/activationFunctions.cpp/: ActivationFunctions.cpp
